--- a/About us.html
+++ b/About us.html
@@ -1,121 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About us</title>
-    <link rel="stylesheet" href="About us.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/about us.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+  </head>
+  <body>
     <!-- container -->
     <div class="container">
-        <!-- navbar-menu -->
-        <div class="navbar-menu">
-            <div class="logo">
-                <a href="#Logo">GECACO LTD</a>
-            </div>
-            <div class="nav-links">
-                <ul>
-                    <li>
-                        <a href="Home.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="About us.html">About us</a>
-                    </li>
-                    <li>
-                        <a href="Contact us.html">Contact us</a>
-                    </li>
-                </ul>
-            </div>
+      <!-- nav-bar menu -->
+      <div class="navbar-menu">
+        <div class="logo">
+          <a href="#Logo">GECACO LTD</a>
         </div>
-        <!-- about section  -->
-        <section class="About">
-                <div class="img">
-                    <img src="IMG-20240608-WA0020.jpg" alt="">
-                </div>
-                <div class="about-text">
-                    <h2>GECACO Ltd CEO</h2>
-                    <p>
-                        Pst.Theophile Kayiranga, <br>
-                        an established civil engineer <br>
-                        with over 25 years of <br>
-                        experience in the field, <br>
-                        holds the responsibility <br>
-                        for leading all the company's <br>
-                        operational activities <br>
-                        and developing strategic <br>
-                        partnerships. <br>
-                        Under his leadership, <br>
-                        the company has seen a <br>
-                        tremendous amount of succes <br>
-                        over the past years. 
-                    </p>
-                </div>
-        </section> 
-        <!-- card-container section  -->
-        <section class="card-container">
-            <h2>Our services</h2>
-            <div class="cards">
-              <div class="C1">
-                  <div class="card-content">
-                      <h1>Civil engineering</h1> <br>
-                      <p>We offer the most contemporary 
-                      house designs with an excellent 
-                      attention to small details
-                      </p>
-                    </div>
-                </div>
-              <div class="C1">
-                  <div class="card-content">
-                      <h1>Architectural engineering</h1> <br>
-                      <p>We offer the most contemporary 
-                      house designs with an excellent 
-                      attention to small details
-                      </p>
-                    </div>
-                </div>
-              <div class="C1">
-                  <div class="card-content">
-                      <h1>Mechanical engineering</h1> <br>
-                      <p>We offer the most contemporary 
-                      house designs with an excellent 
-                      attention to small details
-                      </p>
-                    </div>
-                </div>
-              <div class="C1">
-                  <div class="card-content">
-                      <h1>Land Surveying</h1> <br>
-                      <p>We offer the most contemporary 
-                      house designs with an excellent 
-                      attention to small details
-                      </p>
-                    </div>
-                </div>
-              <div class="C1">
-                  <div class="card-content">
-                      <h1>Electrical Engineering</h1> <br>
-                      <p>We offer the most contemporary 
-                      house designs with an excellent 
-                      attention to small details
-                      </p>
-                    </div>
-                </div>
-              <div class="C1">
-                  <div class="card-content">
-                      <h1>Construction materials</h1> <br>
-                      <p>We offer the most contemporary 
-                      house designs with an excellent 
-                      attention to small details
-                      </p>
-                    </div>
-                </div>
+        <div class="nav-links" id="navLinks">
+          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <ul>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="about us.html">About us</a>
+            </li>
+            <li>
+              <a href="contact us.html">Contact us</a>
+            </li>
+          </ul>
+        </div>
+        <i class="fa fa-bars menu-icon" onclick="showMenu()"></i>
+      </div>
+      <!-- End of nav-bar menu -->
+      <!-- about section  -->
+      <section class="About">
+        <div class="img">
+          <img src="./images/IMG-20240608-WA0020.jpg" alt="" />
+        </div>
+        <div class="about-text">
+          <h2>GECACO Ltd CEO</h2>
+          <p>
+            Pst.Theophile Kayiranga, an established civil engineer with over 25
+            years of experience in the field, holds the responsibility for
+            leading all the company's operational activities and developing
+            strategic partnerships. Under his leadership, the company has seen a
+            tremendous amount of succes over the past years.
+          </p>
+        </div>
+      </section>
+      <!-- card-container section  -->
+      <section class="card-container">
+        <h2>Our services</h2>
+        <div class="cards">
+          <div class="C1">
+            <div class="card-content">
+              <h1>Civil engineering</h1>
+              <br />
+              <p>
+                We offer the most contemporary house designs with an excellent
+                attention to small details
+              </p>
             </div>
-        </section>
-        <!-- footer  -->
-        <footer class="copyright">
-            <p>@Copyright GECACO Ltd 2024</p>
-        </footer> 
+          </div>
+          <div class="C1">
+            <div class="card-content">
+              <h1>Architectural engineering</h1>
+              <br />
+              <p>
+                We offer the most contemporary house designs with an excellent
+                attention to small details
+              </p>
+            </div>
+          </div>
+          <div class="C1">
+            <div class="card-content">
+              <h1>Mechanical engineering</h1>
+              <br />
+              <p>
+                We offer the most contemporary house designs with an excellent
+                attention to small details
+              </p>
+            </div>
+          </div>
+          <div class="C1">
+            <div class="card-content">
+              <h1>Land Surveying</h1>
+              <br />
+              <p>
+                We offer the most contemporary house designs with an excellent
+                attention to small details
+              </p>
+            </div>
+          </div>
+          <div class="C1">
+            <div class="card-content">
+              <h1>Electrical Engineering</h1>
+              <br />
+              <p>
+                We offer the most contemporary house designs with an excellent
+                attention to small details
+              </p>
+            </div>
+          </div>
+          <div class="C1">
+            <div class="card-content">
+              <h1>Construction materials</h1>
+              <br />
+              <p>
+                We offer the most contemporary house designs with an excellent
+                attention to small details
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- footer  -->
+      <footer class="copyright">
+        <p>@Copyright GECACO Ltd 2024</p>
+      </footer>
     </div>
-</body>
+
+    <script src="js/index.js"></script>
+  </body>
 </html>
