--- a/Contact us.html
+++ b/Contact us.html
@@ -1,55 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact us</title>
-    <link rel="stylesheet" href="Contact us.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/contact us.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+  </head>
+  <body>
     <!-- container  -->
     <div class="container">
-        <!-- navbar-menu -->
-        <div class="navbar-menu">
-            <div class="logo">
-                <a href="#Logo">GECACO LTD</a>
-            </div>
-            <div class="nav-links">
-                <ul>
-                    <li>
-                        <a href="Home.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="About us.html">About us</a>
-                    </li>
-                    <li>
-                        <a href="#Contact us">Contact us</a>
-                    </li>
-                </ul>
-            </div>
+      <!-- nav-bar menu -->
+      <div class="navbar-menu">
+        <div class="logo">
+          <a href="#Logo">GECACO LTD</a>
         </div>
-        <!-- box-cards  -->
-        <div class="box-cards">
-            <div class="card-1">
-                <h2>Reach out</h2>
-                <p>
-                    Tel: +250788308911  <br> <br>
-                    Email address: theokayira@gmail.com <br> <br>
-                    Website: https://GECACO LTD.co <br> <br>
-                    Adress: Kigali, Kicukiro, Gahanga <br> <br>
-                    Instagram: @GECACO Ltd <br><br>
-                    Tweeter: @GECACO Ltd <br><br>
-                </p>
-            </div>
-            <div class="card-2">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7974.63068209436!2d30.102100138831844!3d-2.0296091196616723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca901424d5f31%3A0x7c85c6bdf8f95e7b!2sGahanga%2C%20Kigali%2C%20Ruanda!5e0!3m2!1sde!2sde!4v1720341515258!5m2!1sde!2sde" width="479" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </p>
-            </div>
+        <div class="nav-links" id="navLinks">
+          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <ul>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="about us.html">About us</a>
+            </li>
+            <li>
+              <a href="contact us.html">Contact us</a>
+            </li>
+          </ul>
         </div>
-        <!-- footer  -->
-        <footer class="copyright">
-            <p>@Copyright GECACO Ltd 2024</p>
-        </footer> 
-    </div>  
-</body>
+        <i class="fa fa-bars menu-icon" onclick="showMenu()"></i>
+      </div>
+      <!-- End of nav-bar menu -->
+      <!-- box-cards  -->
+      <div class="box-cards">
+        <div class="card-1">
+          <h2>Reach Out</h2>
+
+          <p>Tel: +250788308911</p>
+          <p>Email address: theokayira@gmail.com</p>
+          <p>Website: https://GECACO LTD.co</p>
+          <p>Adress: Kigali, Kicukiro, Gahanga</p>
+          <p>Instagram: @GECACO Ltd</p>
+          <p>Tweeter: @GECACO Ltd</p>
+        </div>
+        <div class="card-2">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7974.63068209436!2d30.102100138831844!3d-2.0296091196616723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca901424d5f31%3A0x7c85c6bdf8f95e7b!2sGahanga%2C%20Kigali%2C%20Ruanda!5e0!3m2!1sde!2sde!4v1720341515258!5m2!1sde!2sde"
+            width="479"
+            height="500"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </div>
+      <!-- footer  -->
+      <footer class="copyright">
+        <p>@Copyright GECACO Ltd 2024</p>
+      </footer>
+    </div>
+
+    <script src="js/index.js"></script>
+  </body>
 </html>
