--- a/Contact us.html
+++ b/Contact us.html
@@ -13,6 +13,39 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
+
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        // https://dashboard.emailjs.com/admin/account
+        emailjs.init({
+          publicKey: "zYyBQt12awpKz-BpQ",
+        });
+      })();
+    </script>
+    <script type="text/javascript">
+      window.onload = function () {
+        document
+          .getElementById("contact-form")
+          .addEventListener("submit", function (event) {
+            event.preventDefault();
+            // these IDs from the previous steps
+            emailjs.sendForm("service_89nq6xx", "template_v3fxxhl", this).then(
+              () => {
+                console.log("SUCCESS!");
+                alert("Message sent");
+              },
+              (error) => {
+                alert("Message not sent");
+                console.log("FAILED...", error);
+              }
+            );
+          });
+      };
+    </script>
   </head>
   <body>
     <!-- container  -->
@@ -39,6 +72,76 @@
         <i class="fa fa-bars menu-icon" onclick="showMenu()"></i>
       </div>
       <!-- End of nav-bar menu -->
+
+      <!-- ---------------Contact-Section-------------------------------- -->
+
+      <div class="contact-section" id="contact">
+        <h1>Get in touch</h1>
+        <div class="contact-form">
+          <form action="" id="contact-form" name="form">
+            <div class="form-container">
+              <div class="input-group">
+                <label for="name">Name</label> <br />
+                <input
+                  type="text"
+                  name="user_name"
+                  id="name"
+                  placeholder="example james"
+                />
+                <p id="error-name"></p>
+              </div>
+              <div class="input-group">
+                <label for="email">Email</label> <br />
+                <input
+                  type="email"
+                  name="user_email"
+                  id="email"
+                  placeholder="example@gmail.com"
+                />
+                <p id="error-email"></p>
+              </div>
+            </div>
+            <div class="form-container">
+              <div class="input-group">
+                <label for="phone">Contact Number</label> <br />
+                <input
+                  type="text"
+                  name="user_phone"
+                  id="phone"
+                  placeholder="+250 78XXXXXXX"
+                />
+                <p id="error-email"></p>
+              </div>
+              <div class="input-group">
+                <label for="address">Address(Optional)</label> <br />
+                <input
+                  type="text"
+                  name="user_address"
+                  id="address"
+                  placeholder="KK7, Kigali"
+                />
+                <p id="error-address"></p>
+              </div>
+            </div>
+            <div class="form-textarea">
+              <label for="">Message</label> <br />
+              <textarea
+                name="message"
+                id="message"
+                placeholder="Message"
+              ></textarea>
+              <p id="error-message"></p>
+            </div>
+            <div class="button-container">
+              <button type="submit" class="btn-colored btn-contact">
+                submit
+              </button>
+            </div>
+          </form>
+        </div>
+        <hr style="background-color: gray; height: 0.6px; border: none" />
+      </div>
+
       <!-- box-cards  -->
       <div class="box-cards">
         <div class="card-1">
